--- a/src/main/webapp/src/modules/teatros/teatros.create.html
+++ b/src/main/webapp/src/modules/teatros/teatros.create.html
@@ -8,11 +8,18 @@
         </div>
    
         <fieldset>
-            <input id="id" class="form-control" type="hidden" ng-model="currentRecord.id"/>
+            <input id="id" class="form-control" type="hidden" ng-model="currentRecord.nombre"/>
             <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
                 <label for="name" class="col-md-2 control-label">Nombre</label>
                 <div class="col-md-10">
-                    <input id="anuncio" name="name" class="form-control" type="text" ng-model="currentRecord.name" ng-init="currentRecord.name" required />
+                    <input id="anuncio" name="name" class="form-control" type="text" ng-model="currentRecord.nombre" ng-init="currentRecord.nombre" required />
+                </div>      
+            </div>
+            <input id="id" class="form-control" type="hidden" ng-model="currentRecord.ciudad"/>
+            <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
+                <label for="name" class="col-md-2 control-label">Ciudad</label>
+                <div class="col-md-10">
+                    <input id="anuncio" name="ciudad" class="form-control" type="text" ng-model="currentRecord.ciudad" ng-init="currentRecord.ciudad" required />
                 </div>      
             </div>
             <button type="button" ui-sref='teatrosList'>Cancel</button>
