--- a/src/main/webapp/src/modules/abonos/abonos.create.html
+++ b/src/main/webapp/src/modules/abonos/abonos.create.html
@@ -13,11 +13,14 @@ and open the template in the editor.
         </div>
    
         <fieldset>
+            <input id="id" class="form-control" type="hidden" ng-model="currentRecord.id"/>
+            <!-- Critico -->
             <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
                 <label for="cliente" class="col-md-2 control-label">Cliente</label>
                 <div class="col-md-10">
                     <input id="cliente" cliente="cliente" class="form-control" type="text" ng-model="currentRecord.cliente" ng-init="currentRecord.cliente" required />
                 </div>
+                <!-- Critico -->
                           <label for="id" class="col-md-2 control-label">Id del abono</label>
                 <div class="col-md-10">
                     <input id="id" idAbono="id" class="form-control" type="text" ng-model="currentRecord.id" ng-init="currentRecord.id" required />
