--- a/src/main/webapp/src/modules/abonos/abonos.list.html
+++ b/src/main/webapp/src/modules/abonos/abonos.list.html
@@ -1,7 +1,7 @@
-<div class="col-md-12">  
+ 
 <div class="container-fluid">
-        <button class="btn btn-default" ui-sref="abonosCreate">Crear nuevo Abono</button>
-    <table class="table table-striped" >
+       
+    <table class="table table-striped" class="col-md-4">
         <thead>
             <tr>
                 <th>Critico</th>        
