--- a/src/main/webapp/src/modules/funciones/funciones.create.html
+++ b/src/main/webapp/src/modules/funciones/funciones.create.html
@@ -1,4 +1,3 @@
-
 <div class="col-md-6 well">
     <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="ctrl.closeAlert($index)" dismiss-on-timeout="5000">{{alert.msg}} </alert>
     <form novalidate name="form" id="funciones-form" role="form" ng-submit="form.$valid && ctrl.saveRecord(currentRecord.id)">
@@ -10,9 +9,30 @@
         <fieldset>
             <input id="id" class="form-control" type="hidden" ng-model="currentRecord.id"/>
             <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
-                <label for="name" class="col-md-2 control-label">Nombre</label> 
+                <label for="name" class="col-md-2 control-label">Id</label> 
                 <div class="col-md-10">  
-                    <input id="anuncio" name="name" class="form-control" type="text" ng-model="currentRecord.name" ng-init="currentRecord.name" required />
+                    <input id="anuncio" name="name" class="form-control" type="text" ng-model="currentRecord.id" ng-init="currentRecord.id" required />
+                </div>
+            </div>
+            <input id="id" class="form-control" type="hidden" ng-model="currentRecord.fecha"/>
+            <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
+                <label for="name" class="col-md-2 control-label">Fecha</label> 
+                <div class="col-md-10"> 
+                    <input id="anuncio" name="name" class="form-control" type="date" ng-model="currentRecord.fecha" ng-init="currentRecord.fecha" required />
+                </div>
+            </div>
+            <input id="id" class="form-control" type="hidden" ng-model="currentRecord.precio"/>
+            <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
+                <label for="name" class="col-md-2 control-label">Precio</label> 
+                <div class="col-md-10">  
+                    <input id="anuncio" name="name" class="form-control" type="number" ng-model="currentRecord.precio" ng-init="currentRecord.precio" required />
+                </div>
+            </div>
+            <input id="id" class="form-control" type="hidden" ng-model="currentRecord.hora"/>
+            <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
+                <label for="name" class="col-md-2 control-label">Hora</label> 
+                <div class="col-md-10">  
+                    <input id="anuncio" name="name" class="form-control" type="time" ng-model="currentRecord.hora" ng-init="currentRecord.hora" required />
                 </div>
             </div>
             <button type="button" ui-sref='funcionesList'>Cancel</button>   
