--- a/src/main/webapp/src/modules/funciones/funciones.list.html
+++ b/src/main/webapp/src/modules/funciones/funciones.list.html
@@ -11,7 +11,7 @@
             <tr ng-repeat="record in records">
                 <td id="{{$index}}-name">{{record.id}}</td>       
                <td>
-                    <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="funcionEdit({funcionNombre: record.nombre})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
+                    <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="funcionEdit({funcionId: record.id})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
                     <button id="{{$index}}-delete-btn" class="btn btn-default btn-sm" ng-click="ctrl.deleteRecord(record)"><span class="glyphicon glyphicon-minus"></span> Remove</button>
                 </td>
             </tr>
@@ -21,5 +21,3 @@
 
 
         
-
-
