--- a/src/main/webapp/src/modules/funciones/funciones.update.html
+++ b/src/main/webapp/src/modules/funciones/funciones.update.html
@@ -1,6 +1,6 @@
 <div class="col-md-6 well">
     <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="ctrl.closeAlert($index)" dismiss-on-timeout="5000">{{alert.msg}} </alert>
-    <form novalidate name="form" id="funciones-form" role="form" ng-submit="form.$valid && ctrl.saveRecord(currentRecord.idd)">
+    <form novalidate name="form" id="funciones-form" role="form" ng-submit="form.$valid && ctrl.updateRecord(currentRecord.idd)">
         
         <div ng-messages="form.$error">     
             <div ng-message="required">Llene los campos requeridos</div>
