--- a/src/main/webapp/src/modules/sillas/sillas.list.html
+++ b/src/main/webapp/src/modules/sillas/sillas.list.html
@@ -17,7 +17,7 @@
 
                 <td>
                     <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="sillaEdit({sillaId: record.id})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
-                    <button id="{{$index}}-delete-btn" class="btn btn-default btn-sm" ng-click="ctrl.deleteRecord(record.nombre)"><span class="glyphicon glyphicon-minus"></span> Remove</button>
+                    <button id="{{$index}}-delete-btn" class="btn btn-default btn-sm" ng-click="ctrl.deleteRecord(record.id)"><span class="glyphicon glyphicon-minus"></span> Remove</button>
 
                 </td>
             </tr>
