--- a/src/main/webapp/src/modules/peliculas/peliculas.create.html
+++ b/src/main/webapp/src/modules/peliculas/peliculas.create.html
@@ -1,7 +1,7 @@
 
 <div class="col-md-6 well">
     <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="ctrl.closeAlert($index)" dismiss-on-timeout="5000">{{alert.msg}} </alert>
-    <form novalidate name="form" id="festivales-form" role="form" ng-submit="form.$valid && ctrl.saveRecord(currentRecord.id)">
+    <form novalidate name="form" id="festivales-form" role="form" ng-submit="form.$valid && ctrl.saveRecord(currentRecord.nombre)">
         
         <div ng-messages="form.$error">
             <div ng-message="required">Llene los campos requeridos</div>
@@ -9,7 +9,7 @@
    
         <fieldset>
             <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
-                <label for="name" class="col-md-2 control-label">Nombre</label>
+                <label for="nombre" class="col-md-2 control-label">Nombre</label>
                 <div class="col-md-10">
                     <input id="nombre" nombre="nombre" class="form-control" type="text" ng-model="currentRecord.nombre" ng-init="currentRecord.nombre" required />
                 </div>
