--- a/src/main/webapp/src/modules/salas/salas.list.html
+++ b/src/main/webapp/src/modules/salas/salas.list.html
@@ -9,11 +9,11 @@
         </thead>
         <tbody>
             <tr ng-repeat="record in records">
-                <td id="{{$index}}-name">{{record.name}}</td>
+                <td id="{{$index}}-name">{{record.numSala}}</td>
 
                 <td>
-                    <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="salasEdit({salaNum: record.num})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
-                    <button id="{{$index}}-delete-btn" class="btn btn-default btn-sm" ng-click="salasDelete({salaNum: record.num})"><span class="glyphicon glyphicon-minus"></span> Remove</button>
+                    <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="salasEdit({numeroSala: record.numSala})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
+                    <button id="{{$index}}-delete-btn" class="btn btn-default btn-sm" ng-click="ctrl.deleteRecord(record.numSala)"><span class="glyphicon glyphicon-minus"></span> Remove</button>
 
                 </td>
             </tr>
