--- a/src/main/webapp/src/modules/salas/salas.list.html
+++ b/src/main/webapp/src/modules/salas/salas.list.html
@@ -3,13 +3,13 @@
     <table class="table table-striped" class="col-md-4">
         <thead>
             <tr>
-                <th>Name</th>        
+                <th>Numero</th>        
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
             <tr ng-repeat="record in records">
-                <td id="{{$index}}-name">{{record.numSala}}</td>
+                <td id="{{$index}}-numero">{{record.numSala}}</td>
 
                 <td>
                     <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="salasEdit({numeroSala: record.numSala})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
