--- a/src/main/webapp/src/modules/sillas/sillas.create.html
+++ b/src/main/webapp/src/modules/sillas/sillas.create.html
@@ -11,7 +11,7 @@
             <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
                 <label for="idnum" class="col-md-2 control-label">Id</label>
                 <div class="col-md-10">
-                    <input id="idnum" idnum="idnum" class="form-control" type="number" ng-model="currentRecord.id" ng-init="currentRecord.id" required />
+                    <input id="idnum" idnum="idnum" class="form-control" type="number" ng-model="currentRecord.id" ng-init="currentRecord.id" readonly="readonly" />
                 </div>
                 <label for="fila" class="col-md-2 control-label">Fila</label>
                 <div class="col-md-10">
