--- a/src/main/webapp/src/modules/peliculas/peliculas.create.html
+++ b/src/main/webapp/src/modules/peliculas/peliculas.create.html
@@ -9,6 +9,10 @@
    
         <fieldset>
             <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
+                <label for="idnum" class="col-md-2 control-label">Id</label>
+                <div class="col-md-10">
+                    <input id="id" id="id" class="form-control" type="number" ng-model="currentRecord.id" ng-init="currentRecord.id" readonly="readonly" />
+                </div>
                 <label for="nombre" class="col-md-2 control-label">Nombre</label>
                 <div class="col-md-10">
                     <input id="nombre" nombre="nombre" class="form-control" type="text" ng-model="currentRecord.nombre" ng-init="currentRecord.nombre" required />
