--- a/src/main/webapp/src/modules/peliculas/peliculas.list.html
+++ b/src/main/webapp/src/modules/peliculas/peliculas.list.html
@@ -12,8 +12,8 @@
                 <td id="{{$index}}-name">{{record.nombre}}</td>
 
                 <td>
-                    <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="peliculasEdit({peliculaNombre: record.nombre})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
-                    <button id="{{$index}}-delete-btn" class="btn btn-default btn-sm" ng-click="ctrl.deleteRecord(record.nombre)"><span class="glyphicon glyphicon-minus"></span> Remove</button>
+                    <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="peliculasEdit({peliculaId: record.id})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
+                    <button id="{{$index}}-delete-btn" class="btn btn-default btn-sm" ng-click="ctrl.deleteRecord(record.id)"><span class="glyphicon glyphicon-minus"></span> Remove</button>
 
                 </td>
             </tr>
