--- a/src/main/webapp/src/modules/salas/salas.create.html
+++ b/src/main/webapp/src/modules/salas/salas.create.html
@@ -8,6 +8,10 @@
    
         <fieldset>
             <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
+               <label for="id" class="col-md-2 control-label">Id</label>
+                <div class="col-md-10">
+                    <input id="id" id="id" class="form-control" type="number" ng-model="currentRecord.id" ng-init="currentRecord.id" readonly="readonly" />
+                </div>
                 <label for="numSala" class="col-md-2 control-label">Numero de sala</label>
                 <div class="col-md-10">
                     <input id="numSala" numSala="numSala" class="form-control" type="number" ng-model="currentRecord.numSala" ng-init="currentRecord.numSala" required />
