--- a/src/main/webapp/src/modules/criticos/criticos.create.html
+++ b/src/main/webapp/src/modules/criticos/criticos.create.html
@@ -1,34 +1,32 @@
 
 <div class="col-md-6 well">
     <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="ctrl.closeAlert($index)" dismiss-on-timeout="5000">{{alert.msg}} </alert>
-    <form novalidate name="form" id="festivales-form" role="form" ng-submit="form.$valid && ctrl.saveRecord(currentRecord.credencial)">
+    <form novalidate name="form" id="festivales-form" role="form" ng-submit="ctrl.saveRecord(currentRecord.id)">
         
         <div ng-messages="form.$error">
             <div ng-message="required">Llene los campos requeridos</div>
         </div>
-   
         <fieldset>
-            <input id="id" class="form-control" type="hidden" ng-model="currentRecord.credencial"/>
-            <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
+                <label for="name" class="col-md-2 control-label">Id</label>
+                <div class="col-md-10">
+                    <input id="id" readonly="readonly" name="name" class="form-control" type="number" ng-model="currentRecord.id" ng-init="currentRecord.id" required />
+                </div>
+                <br>
                 <label for="name" class="col-md-2 control-label">Credencial</label>
                 <div class="col-md-10">
                     <input id="anuncio" name="name" class="form-control" type="number" ng-model="currentRecord.credencial" ng-init="currentRecord.credencial" required />
                 </div>
-            </div>
-            <input id="id" class="form-control" type="hidden" ng-model="currentRecord.duracion"/>
-            <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
+                <br>
                 <label for="name" class="col-md-2 control-label">Duración</label>
                 <div class="col-md-10">
                     <input id="anuncio" name="name" class="form-control" type="number" ng-model="currentRecord.duracion" ng-init="currentRecord.duracion" required />
                 </div>
-            </div>
-            <input id="id" class="form-control" type="hidden" ng-model="currentRecord.nombre"/>
-            <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
+                <br>
                 <label for="name" class="col-md-2 control-label">Nombre</label>
                 <div class="col-md-10">
                     <input id="anuncio" name="name" class="form-control" type="text" ng-model="currentRecord.nombre" ng-init="currentRecord.nombre" required />
                 </div>
-            </div>
+                <br>
             <button type="button" ui-sref='criticosList'>Cancel</button>
             <button type="submit" >Save</button>    
         </fieldset>
