--- a/src/main/webapp/src/modules/festivales/festivales.create.html
+++ b/src/main/webapp/src/modules/festivales/festivales.create.html
@@ -8,21 +8,21 @@
         </div>
    
         <fieldset>
-            <input id="id" class="form-control" type="hidden" ng-model="currentRecord.nombre"/>
+            <input id="nombre" class="form-control" type="hidden" ng-model="currentRecord.nombre"/>
             <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
                 <label for="name" class="col-md-2 control-label">Nombre</label>
                 <div class="col-md-10">
                     <input id="anuncio" name="name" class="form-control" type="text" ng-model="currentRecord.nombre" ng-init="currentRecord.nombre" required />
                 </div>
             </div>
-            <input id="id" class="form-control" type="hidden" ng-model="currentRecord.duracion"/>
+            <input id="duracion" class="form-control" type="hidden" ng-model="currentRecord.duracion"/>
             <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
                 <label for="name" class="col-md-2 control-label">Duración</label>
                 <div class="col-md-10">
                     <input id="anuncio" name="name" class="form-control" type="number" ng-model="currentRecord.duracion" ng-init="currentRecord.duracion" required />
                 </div>
             </div>
-            <input id="id" class="form-control" type="hidden" ng-model="currentRecord.patrocinador"/>
+            <input id="patrocinador" class="form-control" type="hidden" ng-model="currentRecord.patrocinador"/>
             <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
                 <label for="name" class="col-md-2 control-label">Patrocinar</label>
                 <div class="col-md-10">
