--- a/src/main/webapp/src/modules/teatros/teatros.list.html
+++ b/src/main/webapp/src/modules/teatros/teatros.list.html
@@ -12,7 +12,7 @@
                 <td id="{{$index}}-id">{{record.id}}</td>
                 <td id="{{$index}}-name">{{record.nombre}}</td>
                 <td>
-                    <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="teatroEdit({idTeatro: record.id})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
+                    <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="teatroEdit({teatroId: record.id})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
                     <button id="{{$index}}-delete-btn" class="btn btn-default btn-sm" ng-click="ctrl.deleteRecord(record)"><span class="glyphicon glyphicon-minus"></span> Remove</button>
                 </td>
             </tr>
