--- a/src/main/webapp/src/modules/funciones/funciones.list.html
+++ b/src/main/webapp/src/modules/funciones/funciones.list.html
@@ -3,13 +3,17 @@
     <table class="table table-striped" class="col-md-4">
         <thead>
           <tr>    
-                <th>ID</th>        
+                <th>Id</th>
+                <th>Fecha</th>
+                <th>Precio</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
             <tr ng-repeat="record in records">
-                <td id="{{$index}}-name">{{record.id}}</td>       
+               <td id="{{$index}}-id">{{record.id}}</td>    
+               <td id="{{$index}}-dia">{{record.dia}}</td> 
+               <td id="{{$index}}-precio">{{record.precio}}</td>
                <td>
                     <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="funcionEdit({funcionId: record.id})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
                     <button id="{{$index}}-delete-btn" class="btn btn-default btn-sm" ng-click="ctrl.deleteRecord(record)"><span class="glyphicon glyphicon-minus"></span> Remove</button>
