--- a/src/main/webapp/src/modules/clientes/clientes.list.html
+++ b/src/main/webapp/src/modules/clientes/clientes.list.html
@@ -1,5 +1,5 @@
 <div class="container-fluid" >
-   
+    <button class="btn btn-default" ui-sref="clienteCreate">Crear nuevo cliente</button>
     <table class="table table-striped" class="col-md-4">
         <thead>
             <tr>
