--- a/src/main/webapp/src/modules/clientes/clientes.instance.html
+++ b/src/main/webapp/src/modules/clientes/clientes.instance.html
@@ -8,7 +8,7 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="main-bar">
                             <ul class="nav navbar-nav">
-                                <li><a ui-sref="boletasList">Boletas</a></li>
+                                <li><a ui-sref="boletasListNoEdit">Boletas</a></li>
                             </ul>
                         </div> <!-- /.navbar-collapse -->
                     </div> <!-- /.container-fluid -->
