--- a/src/main/webapp/src/modules/funciones/funciones.create.html
+++ b/src/main/webapp/src/modules/funciones/funciones.create.html
@@ -1,6 +1,6 @@
 <div class="col-md-6 well">
     <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="ctrl.closeAlert($index)" dismiss-on-timeout="5000">{{alert.msg}} </alert>
-    <form novalidate name="form" id="funciones-form" role="form" ng-submit="ctrl.saveRecord(currentRecord.id)">
+    <form novalidate name="form" id="funciones-form" role="form" ng-submit="form.$valid && ctrl.saveRecord(currentRecord.id)">
         
         <div ng-messages="form.$error">     
             <div ng-message="required">Llene los campos requeridos</div>
@@ -9,7 +9,7 @@
         <fieldset>
             <label for="name" class="col-md-2 control-label">Id</label>
                 <div class="col-md-10">
-                    <input id="id" readonly="readonly" name="name" class="form-control" type="number" ng-model="currentRecord.id" ng-init="currentRecord.id" required />
+                    <input id="idnum" idnum="idnum" class="form-control" type="number" ng-model="currentRecord.id" ng-init="currentRecord.id" readonly ="readonly" />
                 </div>
             <input id="fecha" class="form-control" type="hidden" ng-model="currentRecord.dia"/>
             <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
