--- a/src/main/webapp/src/modules/sillas/sillas.list.html
+++ b/src/main/webapp/src/modules/sillas/sillas.list.html
@@ -1,5 +1,7 @@
 <div class="container-fluid" >
    
+    <button class="btn btn-default" ui-sref="sillasCreate">Crear Silla</button>
+    
     <table class="table table-striped" class="col-md-4">
         <thead>
             <tr>
