--- a/src/main/webapp/src/modules/funciones/funciones.instance.html
+++ b/src/main/webapp/src/modules/funciones/funciones.instance.html
@@ -9,6 +9,7 @@
                         <div class="collapse navbar-collapse" id="main-bar">
                             <ul class="nav navbar-nav">
                                 <li><a ui-sref="peliculasList">Peliculas</a></li>
+                                <li><a ui-sref="boletasList">Boletas</a></li>
                             </ul>
                         </div> <!-- /.navbar-collapse -->
                     </div> <!-- /.container-fluid -->
