--- a/src/main/webapp/src/modules/peliculas/peliculas.list.html
+++ b/src/main/webapp/src/modules/peliculas/peliculas.list.html
@@ -19,4 +19,6 @@
             </tr>
         </tbody>
     </table>
+    <button class="btn btn-default" ui-sref="peliculasCreate">Crear película</button>
+
 </div>
