--- a/src/main/webapp/src/modules/funciones/funciones.instance.html
+++ b/src/main/webapp/src/modules/funciones/funciones.instance.html
@@ -10,6 +10,7 @@
                             <ul class="nav navbar-nav">
                                 <li><a ui-sref="peliculasList">Peliculas</a></li>
                                 <li><a ui-sref="boletasList">Boletas</a></li>
+                                <li><a ui-sref="criticosListNoEdit">Criticos</a></li>
                             </ul>
                         </div> <!-- /.navbar-collapse -->
                     </div> <!-- /.container-fluid -->
